--- a/edu_lite/templates/topic.html
+++ b/edu_lite/templates/topic.html
@@ -6,16 +6,15 @@
 
 <div class="container">
 <h1>Тестирование</h1>
-<form action="" method="POST" name="test">
+<form action="" method="POST" name="topic">
    {{ form.hidden_tag() }}
     <p>
         Выбери испытание:<br>
-            </p>
-        {% for i in form.tests %}
-            <p>
-                <a href="http://127.0.0.1:5000/test">{{i}}</a><br>
-            </p>
-    {% endfor %}
+        {{ form.topic() }}<br>
+    </p>
+    <p>
+        <input type="submit" value="Начать">
+    </p>
 </form>
 </div>
 <hr>
