add exercise generation

--- a/edu_lite/templates/topic.html
+++ b/edu_lite/templates/topic.html
@@ -17,6 +17,8 @@
         {{ form.subtopic() }}
 
     </p>
+    <p>Количество: {{  form.num_of_questions() }}</p>
+    <p>Время: {{ form.time() }} мин.</p>
     <p>
         <input type="submit" value="Начать">
     </p>
