--- a/edu_lite/templates/admin.html
+++ b/edu_lite/templates/admin.html
@@ -10,6 +10,10 @@
 <h3>Зарегистрировать пользователя</h3>
 <form action="" method="POST" name="registration">
     {{ form_reg.hidden_tag() }}
+    Прошлые попытки
+    <p>{{ past_attempt.student() }}</p>
+    <p>{{ past_attempt.date() }}</p>
+    <p><input type="submit" value="Найти"></p>
     <p>
         {{ wtf.form_field(form_reg.name) }}<br>
         {{ wtf.form_field(form_reg.password) }}<br>
