--- a/edu_lite/templates/login.html
+++ b/edu_lite/templates/login.html
@@ -12,7 +12,7 @@
 	<form action="" method="POST" name="login">
 	    {{ form.hidden_tag() }}
 	    <p>
-	        {{ wtf.form_field(form.name) }}<br>
+	        {{ wtf.form_field(form.login) }}<br>
 	        {{ wtf.form_field(form.password) }}<br>
 	    </p>
 	    <p>
