--- a/edu_lite/templates/registration.html
+++ b/edu_lite/templates/registration.html
@@ -8,8 +8,11 @@
 <form action="" method="POST" name="registration">
     {{ form.hidden_tag() }}
     <p>
-        {{ wtf.form_field(form.name) }}<br>
-        {{ wtf.form_field(form.password) }}<br>
+        {{ wtf.form_field(form_reg.name) }}<br>
+        {{ wtf.form_field(form_reg.second_name) }}<br>
+        {{ wtf.form_field(form_reg.surname) }}<br>
+        {{ wtf.form_field(form_reg.login) }}<br>
+        {{ wtf.form_field(form_reg.password) }}<br>
     </p>
     <p>{{ wtf.form_field(form.password_repeat) }} </p>
     <p><input type="submit" value="Register"></p>
