beta 1.1 (fixed view results)

--- a/edu_lite/templates/past_results.html
+++ b/edu_lite/templates/past_results.html
@@ -11,9 +11,9 @@
 
 {% for answer in results %}
         {% if answer[1] == answer[2] %}
-                <p style="color:green">{{ answer[0] }}</p>
+                <p style="color:green">{{answer[0]}} = {{answer[1]}} Ответ ученика: {{answer[2]}}</p>
         {% else %}
-                <p style="color:red">{{ answer[0] }}</p>
+                <p style="color:red">{{answer[0]}} = {{answer[1]}} Ответ ученика: {{answer[2]}}</p>
         {% endif %}
 {% endfor %}
 <hr>
