--- a/edu_lite/templates/attempt.html
+++ b/edu_lite/templates/attempt.html
@@ -6,9 +6,9 @@
 <h1>{{ test_name }}</h1>
 <script type="text/javascript">
 
-function showquestions(hh, gg)
+function showquestions(hh, questions)
 {
-    for (let i = 1; i <= gg; i++) { // выведет 0, затем 1, затем 2
+    for (let i = 1; i <= questions; i++) {
          document.getElementById(i).style.display="none";
     }
     document.getElementById(hh).style.display="block";
@@ -18,14 +18,14 @@ function checkInputs(form){
     var questList = [];
     var answList = [];
     var questions = document.getElementsByTagName('ul');
- 
+
     for(var i=0; i<questions.length; i++){
         answers = questions[i].getElementsByTagName('input');
         for(var j=0; j<answers.length; j++){
             if(answers[j].checked){
                 answList.push(answers[j].id);
             }
-        } 
+        }
         if(answList.length > 0){
             questList.push(questions[i]);
         }
@@ -60,28 +60,143 @@ input
     {
         vertical-align:top;
     }
+
+#buttq
+        {
+                background-color: #000;
+                border: none;
+                color: white;
+                width: 300px;
+                height: 50px;
+                text-align: center;
+                text-decoration: none;
+                display: inline-block;
+                font-size: 30px;
+                cursor: pointer;
+
+                position: absolute;
+                left: 50%;
+                top: 90%;
+                -webkit-transform: translate(-50%, -90%);
+                -moz-transform: translate(-50%, -90%);
+                -ms-transform: translate(-50%, -90%);
+                -o-transform: translate(-50%, -90%);
+                transform: translate(-50%, -90%);
+        }
+
+#contentbutt
+        {
+                border: 1px solid black;
+                width: 1000px;
+                height: 70px;
+        }
+#buttqnumb
+        {
+
+
+
+                position: absolute;
+                left: 50%;
+                top: 20%;
+                -webkit-transform: translate(-50%, -20%);
+                -moz-transform: translate(-50%, -20%);
+                -ms-transform: translate(-50%, -20%);
+                -o-transform: translate(-50%, -20%);
+                transform: translate(-50%, -20%);
+        }
+#namequestions
+            {
+                text-decoration: none;
+                display: inline-block;
+                font-size: 26px;
+
+                position: absolute;
+                left: 50%;
+                top: 30%;
+                -webkit-transform: translate(-50%, -30%);
+                -moz-transform: translate(-50%, -30%);
+                -ms-transform: translate(-50%, -30%);
+                -o-transform: translate(-50%, -30%);
+                transform: translate(-50%, -30%);
+            }
+#formquestions
+            {
+
+                position: absolute;
+                left: 50%;
+                top: 50%;
+                -webkit-transform: translate(-50%, -50%);
+                -moz-transform: translate(-50%, -50%);
+                -ms-transform: translate(-50%, -50%);
+                -o-transform: translate(-50%, -50%);
+                transform: translate(-50%, -50%);
+            }
+#content
+        {
+                width: 1000px;
+                height: 600px;
+                position: absolute;
+                left: 50%;
+                top: 50%;
+                -webkit-transform: translate(-50%, -50%);
+                -moz-transform: translate(-50%, -50%);
+                -ms-transform: translate(-50%, -50%);
+                -o-transform: translate(-50%, -50%);
+                transform: translate(-50%, -50%);
+        }
+#questions
+        {
+                border: 1px solid black;
+                width: 800px;
+                height: 300px;
+                position: absolute;
+                left: 50%;
+                top: 50%;
+                -webkit-transform: translate(-50%, -50%);
+                -moz-transform: translate(-50%, -50%);
+                -ms-transform: translate(-50%, -50%);
+                -o-transform: translate(-50%, -50%);
+                transform: translate(-50%, -50%);
+        }
 </style>
+<div id="content">
 
-<form id="attempt" action="" method="POST" name="answer">
+                    <div id="buttqnumb">
+                                {% for item in questions %}
+                                <input
+                                style="
+                                background-color: #000;
+                                border: none;
+                                color: white;
+                                width: 30px;
+                                height: 30px;
+                                text-align: center;
+                                text-decoration: none;
+                                display: inline-block;
+                                font-size: 12px;
+                                cursor: pointer;"
+                                onclick="showquestions('{{loop.index}}', '{{ questions|length }}')" type="submit" value="{{loop.index}}">
+                                {% endfor %}
+                    </div>
 
-        {{ form.hidden_tag() }}
-            {% for item in questions %}
+                    <div id="questions">
+                                    <form id="attempt" action="" method="POST" name="answer">
 
-            <div id="{{ loop.index }}" style="display: none;">
-                <h3  >{{ item[1] }}</h3>
-                <div >{{ form.field_answer(id=item[0]) }}</div>
-            </div>
-            {% endfor %}
+                                                    {{ form.hidden_tag() }}
+                                                        {% for item in questions %}
 
-        <p>
-            <input type="submit" value="Отправить">
-        </p>
+                                                        <div id="{{ loop.index }}" style="display: none;">
+                                                            <div id="namequestions"> {{ item[1] }} </div>
+                                                            <div id="formquestions" >{{ form.field_answer(id=item[0]) }}</div>
+                                                        </div>
 
-</form>
-{% for item in questions %}
-<input onclick="showquestions('{{loop.index}}', '{{ gg }}')" type="submit" value="{{loop.index}}">
-{% endfor %}
+                                                        {% endfor %}
+
+                                        <input id="buttq" type="submit" value="Отправить">
 
 
+                                    </form>
+                    </div>
+</div>
 
 {% endblock %}
