--- a/edu_lite/templates/login.html
+++ b/edu_lite/templates/login.html
@@ -14,6 +14,18 @@
 			{
 				width: 250px;
 			}
+	#reg
+		{
+			position: absolute;
+			left: 52.9%;
+			top: 65.4%;
+			-webkit-transform: translate(-52.9%, -65.4%);
+			-moz-transform: translate(-52.9%, -65.4%);
+			-ms-transform: translate(-52.9%, -65.4%);
+			-o-transform: translate(-52.9%, -65.4%);
+			transform: translate(-52.9%, -65.4%);
+
+		}
 
 </style>
 <html>
@@ -52,6 +64,13 @@ alert(value)
 				</p>
 	  </div>
 	</form>
+<form action="registration" method="get">
+
+
+		<input id="reg" type="submit" value="Зарегистрироваться" >
+
+
+</form>
 </div>
 {% endblock %}
 
