fix bug in manage.py

--- a/edu_lite/templates/topic.html
+++ b/edu_lite/templates/topic.html
@@ -142,26 +142,13 @@
 
 
 </style>
-
+<html>
 <script src="/script/snippet-javascript-console.min.js?v=1"></script>
+<head>
+    <script src = "/scripts/snippet-javascript-console.min.js?v=1"></script>
+</head>
 
-<script type="text/javascript">
-
-const subtopic = document.getElementById('subtopic');
-const subtopicOpts = [...subtopic.children];
-
-document.getElementById('topic').addEventListener(
-  'change',
-  (e) => {
-    subtopic.innerHTML = subtopicOpts.filter(
-      o => e.target.value.includes(o.value)
-    ).map(o => o.outerHTML).join('')
-  })
-
-  alert(asdasda);
-</script>
-
-<div class="container">
+<body>
         <h1 id="zagolovok">Тестирование</h1>
 
         <form action="" method="POST" name="topic">
@@ -195,6 +182,21 @@ document.getElementById('topic').addEventListener(
                     <input id="buttstart" type="submit" value="Начать">
 
         </form>
-</div>
+        <script type="text/javascript">
 
+                const subtopic = document.getElementById('subtopic');
+                const subtopicOpts = [...subtopic.children];
+
+                document.getElementById('topic').addEventListener(
+                  'change',
+                  (e) => {
+                    subtopic.innerHTML = subtopicOpts.filter(
+                      o => e.target.value.includes(o.value)
+                    ).map(o => o.outerHTML).join('')
+                  })
+
+                  alert(asdasda);
+        </script>
+</body>
+</html>
 {% endblock %}
