fixed pages view

--- a/edu_lite/templates/login.html
+++ b/edu_lite/templates/login.html
@@ -17,15 +17,210 @@
 	#reg
 		{
 			position: absolute;
-			left: 52.9%;
-			top: 65.4%;
-			-webkit-transform: translate(-52.9%, -65.4%);
-			-moz-transform: translate(-52.9%, -65.4%);
-			-ms-transform: translate(-52.9%, -65.4%);
-			-o-transform: translate(-52.9%, -65.4%);
-			transform: translate(-52.9%, -65.4%);
+			left: 84.7%;
+			top: 98%;
+			-webkit-transform: translate(-84.7%, -98%);
+			-moz-transform: translate(-84.7%, -98%);
+			-ms-transform: translate(-84.7%, -98%);
+			-o-transform: translate(-84.7%, -98%);
+			transform: translate(-84.7%, -98%);
 
 		}
+	#container
+		{
+
+			width: 300px;
+			height: 330px;
+
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			-webkit-transform: translate(-50%, -50%);
+			-moz-transform: translate(-50%, -50%);
+			-ms-transform: translate(-50%, -50%);
+			-o-transform: translate(-50%, -50%);
+			transform: translate(-50%, -50%);
+		}
+@media screen and (max-width: 1200px)
+{
+	#namepass
+			{
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			-webkit-transform: translate(-50%, -50%);
+			-moz-transform: translate(-50%, -50%);
+			-ms-transform: translate(-50%, -50%);
+			-o-transform: translate(-50%, -50%);
+			transform: translate(-50%, -50%);
+			}
+	#name, #pass
+			{
+				width: 250px;
+			}
+	#reg
+		{
+			position: absolute;
+			left: 84.7%;
+			top: 98%;
+			-webkit-transform: translate(-84.7%, -98%);
+			-moz-transform: translate(-84.7%, -98%);
+			-ms-transform: translate(-84.7%, -98%);
+			-o-transform: translate(-84.7%, -98%);
+			transform: translate(-84.7%, -98%);
+
+		}
+	#container
+		{
+
+			width: 300px;
+			height: 330px;
+
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			-webkit-transform: translate(-50%, -50%);
+			-moz-transform: translate(-50%, -50%);
+			-ms-transform: translate(-50%, -50%);
+			-o-transform: translate(-50%, -50%);
+			transform: translate(-50%, -50%);
+		}
+}
+@media screen and (max-width: 998px)
+{
+	#namepass
+			{
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			-webkit-transform: translate(-50%, -50%);
+			-moz-transform: translate(-50%, -50%);
+			-ms-transform: translate(-50%, -50%);
+			-o-transform: translate(-50%, -50%);
+			transform: translate(-50%, -50%);
+			}
+	#name, #pass
+			{
+				width: 250px;
+			}
+	#reg
+		{
+			position: absolute;
+			left: 84.7%;
+			top: 98%;
+			-webkit-transform: translate(-84.7%, -98%);
+			-moz-transform: translate(-84.7%, -98%);
+			-ms-transform: translate(-84.7%, -98%);
+			-o-transform: translate(-84.7%, -98%);
+			transform: translate(-84.7%, -98%);
+
+		}
+	#container
+		{
+
+			width: 300px;
+			height: 330px;
+
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			-webkit-transform: translate(-50%, -50%);
+			-moz-transform: translate(-50%, -50%);
+			-ms-transform: translate(-50%, -50%);
+			-o-transform: translate(-50%, -50%);
+			transform: translate(-50%, -50%);
+		}
+}
+@media screen and (max-width: 768px)
+{
+	#namepass
+			{
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			-webkit-transform: translate(-50%, -50%);
+			-moz-transform: translate(-50%, -50%);
+			-ms-transform: translate(-50%, -50%);
+			-o-transform: translate(-50%, -50%);
+			transform: translate(-50%, -50%);
+			}
+	#name, #pass
+			{
+				width: 250px;
+			}
+	#reg
+		{
+			position: absolute;
+			left: 84.7%;
+			top: 98%;
+			-webkit-transform: translate(-84.7%, -98%);
+			-moz-transform: translate(-84.7%, -98%);
+			-ms-transform: translate(-84.7%, -98%);
+			-o-transform: translate(-84.7%, -98%);
+			transform: translate(-84.7%, -98%);
+
+		}
+	#container
+		{
+
+			width: 300px;
+			height: 330px;
+
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			-webkit-transform: translate(-50%, -50%);
+			-moz-transform: translate(-50%, -50%);
+			-ms-transform: translate(-50%, -50%);
+			-o-transform: translate(-50%, -50%);
+			transform: translate(-50%, -50%);
+		}
+}
+@media screen and (max-width: 576px)
+{
+	#namepass
+			{
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			-webkit-transform: translate(-50%, -50%);
+			-moz-transform: translate(-50%, -50%);
+			-ms-transform: translate(-50%, -50%);
+			-o-transform: translate(-50%, -50%);
+			transform: translate(-50%, -50%);
+			}
+	#name, #pass
+			{
+				width: 250px;
+			}
+	#reg
+		{
+			position: absolute;
+			left: 84.7%;
+			top: 98%;
+			-webkit-transform: translate(-84.7%, -98%);
+			-moz-transform: translate(-84.7%, -98%);
+			-ms-transform: translate(-84.7%, -98%);
+			-o-transform: translate(-84.7%, -98%);
+			transform: translate(-84.7%, -98%);
+
+		}
+	#container
+		{
+
+			width: 300px;
+			height: 330px;
+
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			-webkit-transform: translate(-50%, -50%);
+			-moz-transform: translate(-50%, -50%);
+			-ms-transform: translate(-50%, -50%);
+			-o-transform: translate(-50%, -50%);
+			transform: translate(-50%, -50%);
+		}
+}
 
 </style>
 <html>
@@ -46,7 +241,7 @@ alert(value)
 
 {% block content %}
 
-<div class="container">
+<div id="container">
 
 	<form action="" method="POST" name="login">
 	  <div id="namepass">
@@ -64,6 +259,9 @@ alert(value)
 				</p>
 	  </div>
 	</form>
+
+
+
 <form action="registration" method="get">
 
 
@@ -71,7 +269,8 @@ alert(value)
 
 
 </form>
-</div>
+	</div>
+
 {% endblock %}
 
 
