--- a/edu_lite/templates/admin.html
+++ b/edu_lite/templates/admin.html
@@ -4,7 +4,10 @@
 
 {% block content %}
 
-<script type="text/javascript">
+<link rel="stylesheet" href="/static/style.css">
+<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+
+<script language="JavaScript" type="text/javascript" src="/js/jquery-1.2.6.min.js">
     $(document).ready ( function () {
     $(document).on ("click", "find_past_attempts", function (e) {
         if(e.target.type =="button")
