--- a/edu_lite/templates/past_attempts.html
+++ b/edu_lite/templates/past_attempts.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="/static/style.css">
 <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
 
-<script type="text/javascript">
+<script language="JavaScript" type="text/javascript" src="/js/jquery-1.2.6.min.js">
     $(document).ready ( function () {
     $(document).on ("click", "#results", function (e) {
         if(e.target.type =="button")
